@startuml

title __TYPES's Class Diagram__\n

  package types {
    class Elem {
        + key : int
        + Elem()
        + Elem()
        + toString()
    }
  }
  

  package types {
    class Node {
        + Node()
        + Node()
        + getNext()
        + setNext()
        + getElem()
    }
  }
  

  package types {
    class Pos {
        + isValid : Boolean
        - previousIndex : Integer
        - nextIndex : Integer
        + Pos()
        + Pos()
        + getPointer()
        + getPreviousIndex()
        + setPreviousIndex()
        + setNextIndex()
        + getNextIndex()
        + getSet()
        + setPointer()
    }
  }
  

  Elem o-- T : data
  Node o-- Node : next
  Node o-- Elem : elem
  Pos o-- T : pointer
  Pos o-- SetInterface : set


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
